...

    <Button
        android:text="Find Restaurants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:id="@+id/findRestaurantsButton"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
...
        android:ems="10"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Enter Zip Code"
        android:layout_centerHorizontal="true"
        android:id="@+id/locationEditText" />


</RelativeLayout>

